💄 Prevent ScrollToTop button overlap on mobile

--- a/src/components/scrollToTop/scrollToTop.scss
+++ b/src/components/scrollToTop/scrollToTop.scss
@@ -29,3 +29,9 @@
     transition: color 0.3s ease-out, background 0.3s ease-in;
   }
 }
+
+@media all and (max-width: 500px) {
+  .latest-launches__scroll-to-top {
+    bottom: 6rem;
+  }
+}
